fix keypress / keyCode == 13

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
 
         <!-- ---------------------------- main content ----------------------------- -->
-                <form action method="post" id="form" autocomplete="off">
+                <form autocomplete="off">
                     <input style="display:none">
                     <input type="password" style="display:none">
                     <div class="row">
@@ -84,18 +84,18 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-6 label">
-                            <h3>Current Home Country</h3>
-                            <input type="text" class="form-control ui-autocomplete-input" placeholder="Current country" id="country" autocomplete="off" required>
+                            <h3>Current Country</h3>
+                            <input type="text" class="form-control ui-autocomplete-input" placeholder="Current Country" id="current" required>
                         </div>
                         <div class="col-12 col-md-6 label">
-                            <h3>New Home Country</h3>
-                            <input type="text" class="form-control" placeholder="New country" id="newCountry" autocomplete="off" required>
+                            <h3>New Country</h3>
+                            <input type="text" class="form-control" placeholder="New Country" id="newThing" required>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-6 label">
                             <h3>Current <span id="homeSal"></span> Salary</h3>
-                            <input type="text" class="form-control" placeholder="Current home salary" id="country" autocomplete="off" required>
+                            <input type="text" class="form-control" placeholder="Current home salary" id="salary" required>
                         </div>
                     </div>
                     <div class="row">
@@ -110,7 +110,7 @@
                         </div>
                         <div class="col-12 col-md-6 label">
                             <h3>New <span id="newSal"></span> Salary</h3>
-                            <input type="text" class="form-control" placeholder="New home salary" id="newCountry" disabled>
+                            <input type="text" class="form-control" placeholder="New home salary" id="newSal" disabled>
                         </div>
                     </div>
             <!-- -------------------------- conversion button -------------------------- -->
