Working calculator - needs design / error handling

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="row">
                         <div class="col-12 col-md-6 label">
                             <h3>Current <span id="homeSal"></span> Salary</h3>
-                            <input type="text" class="form-control" placeholder="Current home salary" id="salary" required>
+                            <input type="text" class="form-control number-separator" placeholder="Current home salary" id="salary" required>
                         </div>
                     </div>
                     <div class="row">
@@ -109,7 +109,7 @@
                             <input type="text" class="form-control" placeholder="Base currency conversion" id="baseCurrency" disabled>
                         </div>
                         <div class="col-12 col-md-6 label">
-                            <h3>New <span id="newSal"></span> Salary</h3>
+                            <h3>New <span id="newCode"></span> Salary</h3>
                             <input type="text" class="form-control" placeholder="New home salary" id="newSal" disabled>
                         </div>
                     </div>
@@ -158,6 +158,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
         <!-- ------------ jQuery UI CDN for autocomplete and animations ------------ -->
         <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
+        <!-- --------------------- thousands separator plugin ---------------------- -->
+        <script src="js/easy-number-separator.js"></script>
         <script src="js/currency.js"></script>
         <script src="" async defer></script>
     </body>
