--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-6 label">
-                            <h3>Current <span id="homeSal"></span> Salary</h3>
+                            <h3>Current <span id="homeLocation"></span> Salary</h3>
                             <input type="text" class="form-control number-separator" placeholder="Current home salary" id="salary" required>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             <input type="text" class="form-control" placeholder="Base currency conversion" id="baseCurrency" disabled>
                         </div>
                         <div class="col-12 col-md-6 label">
-                            <h3>New <span id="newCode"></span> Salary</h3>
+                            <h3>New <span id="newLocation"></span> Salary</h3>
                             <input type="text" class="form-control" placeholder="New home salary" id="newSal" disabled>
                         </div>
                     </div>
@@ -140,7 +140,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12 text-center">
-                            <p><span class="copy">&copy;</span> <span id="copyrightYear">0</span> - BPC</p>
+                            <p><span class="copy">&copy;</span> <span id="copyrightYear">0</span> - BPC</p><br>
+                            <p>Documentation on Currency Converter and the APIs used can be found at the GitHub link above.</p>
                         </div>
                     </div>
                 </div>
