<input> field popover error handlers

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     <div class="row">
                         <div class="col-12 col-md-6 label">
                             <h3>Current Country</h3>
-                            <input type="text" class="form-control ui-autocomplete-input" placeholder="Current Country" id="current" required>
+                            <input type="text" class="form-control ui-autocomplete-input invalid" placeholder="Current Country" id="current" required>
                         </div>
                         <div class="col-12 col-md-6 label">
                             <h3>New Country</h3>
-                            <input type="text" class="form-control" placeholder="New Country" id="newThing" required>
+                            <input type="text" class="form-control ui-autocomplete-input" placeholder="New Country" id="newThing" required>
                         </div>
                     </div>
                     <div class="row">
