--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="row">
                         <div class="col-12 col-md-6 label">
                             <h3>Current Country</h3>
-                            <input type="text" class="form-control ui-autocomplete-input invalid" placeholder="Current Country" id="current" required>
+                            <input type="text" class="form-control ui-autocomplete-input" placeholder="Current Country" id="current" required>
                         </div>
                         <div class="col-12 col-md-6 label">
                             <h3>New Country</h3>
