forgot to change to design branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- ---------------------------- google fonts ----------------------------- -->
         <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <!-- --------------------------- bootstrap theme --------------------------- -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <!-- --------------------------- jQuery UI Theme --------------------------- -->    
@@ -30,7 +31,7 @@
         </header>
         <!-- ---------------------------- main content ----------------------------- -->
         <main>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-12" id="image">
                         <img src="img/cash.jpg"/>
@@ -48,14 +49,14 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                        1. Enter employee current home country.<br>
-                        2. Enter employee new home country.<br>
-                        3. Base exchange rate is reported.<br>
-                        4. Enter employee home country salary.<br>
-                        5. After entering all required information, use 
+                        <p>1. Enter employee current home country.</p>
+                        <p>2. Enter employee new home country.</p>
+                        <p>3. Base exchange rate is reported.</p>
+                        <p>4. Enter employee home country salary.</p>
+                        <p>5. After entering all required information, use 
                         <button type="button" class="btn-primary" id="example" >Convert</button> 
-                        button located below the salary information fields.<br>
-                        6. New salary is calculated for you!
+                        button located below the salary information fields.</p>
+                        <p>6. New salary is calculated for you!</p>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
