--- a/index.html
+++ b/index.html
@@ -21,23 +21,38 @@
     <body>
         <!-- ---------------------------- header title ----------------------------- -->    
         <header>
-            <div class="container-fluid">
-                <div class="row" id="title">
-                    <div class="col-12 text-center">
-                        <h1>Currency Converter</h1>
+            <div class="container">
+                <div class="row">
+                    <div id="carousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner col-12">
+            <!-- ---------------------- site title w/in carousel ----------------------- -->
+                            <div class="row justify-content-center">
+                                <div id='title' class='col-6 text-center align-self-center'>
+                                    <div class='row align-items-center'>
+                                        <div id='title-text' class='col-12 align-self-center'>
+                                            <h1><span class='cent'>&cent;</span>urrency <span class='cent'>&cent;</span>onverter</h1>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="carousel-item active">
+                                        <img class="d-block w-100" src="img/cash.jpg" alt="First slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="img/currency.jpg" alt="Second slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="img/cash_coin.jpeg" alt="Third slide">
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>   
                     </div>
-                </div>
+                </div>                 
             </div>
         </header>
         <!-- ---------------------------- main content ----------------------------- -->
         <main>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12" id="image">
-                        <img src="img/cash.jpg"/>
-                    </div>
-                </div>
-            </div>
             <!-- Modal -->
             <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                 <div class="modal-dialog" role="document">
