change 'col' size for xs device

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="row" id='carousel-row'>
                                     <div class="carousel-item active">
                                         <img class="d-block w-100" src="img/cash.jpg" alt="First slide">
                                     </div>
