--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <body>
         <!-- ---------------------------- header title ----------------------------- -->    
         <header>
-            <div class="container">
+            <div class="container" id='carousel-container'>
                 <div class="row">
                     <div id="carousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner col-12">
             <!-- ---------------------- site title w/in carousel ----------------------- -->
                             <div class="row justify-content-center">
-                                <div id='title' class='col-6 text-center align-self-center'>
+                                <div id='title' class='col-10 text-center align-self-center'>
                                     <div class='row align-items-center'>
                                         <div id='title-text' class='col-12 align-self-center'>
                                             <h1><span class='cent'>&cent;</span>urrency <span class='cent'>&cent;</span>onverter</h1>
@@ -35,13 +35,13 @@
                                     </div>
                                 </div>
                                 <div class="row" id='carousel-row'>
-                                    <div class="carousel-item active">
+                                    <div class="carousel-item active img-fluid">
                                         <img class="d-block w-100" src="img/cash.jpg" alt="First slide">
                                     </div>
                                     <div class="carousel-item">
                                         <img class="d-block w-100" src="img/currency.jpg" alt="Second slide">
                                     </div>
-                                    <div class="carousel-item">
+                                    <div class="carousel-item img-fluid">
                                         <img class="d-block w-100" src="img/cash_coin.jpeg" alt="Third slide">
                                     </div>
                                 </div> 
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong" id="howto">
                             How To
                         </button>                    
                     </div>
