--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
         <!-- ---------------------------- main content ----------------------------- -->
                 <form autocomplete="off">
+                    <!-- Hack to prevent google from populating autofill -->
                     <input style="display:none">
                     <input type="password" style="display:none">
                     <div class='required'>
